force-app/main/default/objects/Promocion__c/fields/Porcentaje_penalizacion_escritura__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_penalizacion_escritura__c</fullName>
    <label>Porcentaje penalización escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>