force-app/main/default/objects/Promocion__c/fields/Porcentaje_penalizacion_reserva__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_penalizacion_reserva__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Porcentaje penalización reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>