force-app/main/default/objects/Promocion__c/fields/Precio_maximo_3_dormitorios__c.field-meta.xml
<CustomField>
    <fullName>Precio_maximo_3_dormitorios__c</fullName>
    <label>Precio máximo 3 dormitorios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>