force-app/main/default/objects/Promocion__c/fields/Precio_minimo_1_dormitorio__c.field-meta.xml
<CustomField>
    <fullName>Precio_minimo_1_dormitorio__c</fullName>
    <label>Precio mínimo 1 dormitorio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>