force-app/main/default/objects/Promocion__c/fields/Precio_minimo_3_dormitorios__c.field-meta.xml
<CustomField>
    <fullName>Precio_minimo_3_dormitorios__c</fullName>
    <label>Precio mínimo 3 dormitorios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>