force-app/main/default/objects/Promocion__c/fields/Precio_minimo_4_dormitorios__c.field-meta.xml
<CustomField>
    <fullName>Precio_minimo_4_dormitorios__c</fullName>
    <label>Precio mínimo 4 dormitorios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>