force-app/main/default/objects/Promocion__c/fields/PreReservaBajasSemana__c.field-meta.xml
<CustomField>
    <fullName>PreReservaBajasSemana__c</fullName>
    <label>PreReserva Bajas semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>