force-app/main/default/objects/Promocion__c/fields/PreReservaNetoSemana__c.field-meta.xml
<CustomField>
    <fullName>PreReservaNetoSemana__c</fullName>
    <formula>PreReservaAltasSemana__c -  PreReservaBajasSemana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PreReserva Neto semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>