force-app/main/default/objects/Promocion__c/fields/PrevisionBasuras__c.field-meta.xml
<CustomField>
    <fullName>PrevisionBasuras__c</fullName>
    <label>Previsión Basuras</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>