force-app/main/default/objects/Promocion__c/fields/PrevisionIBI__c.field-meta.xml
<CustomField>
    <fullName>PrevisionIBI__c</fullName>
    <label>Previsión IBI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>