force-app/main/default/objects/Promocion__c/fields/PromocionFinalizada__c.field-meta.xml
<CustomField>
    <fullName>PromocionFinalizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promoción finalizada</label>
    <type>Checkbox</type>
</CustomField>