force-app/main/default/objects/Promocion__c/fields/PromocionInactiva__c.field-meta.xml
<CustomField>
    <fullName>PromocionInactiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promoción inactiva</label>
    <type>Checkbox</type>
</CustomField>