force-app/main/default/objects/Promocion__c/fields/PromocionSinInfomar__c.field-meta.xml
<CustomField>
    <fullName>PromocionSinInfomar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promoción sin infomar</label>
    <type>Checkbox</type>
</CustomField>