force-app/main/default/objects/Promocion__c/fields/ProvisionComunidadPropietarios__c.field-meta.xml
<CustomField>
    <fullName>ProvisionComunidadPropietarios__c</fullName>
    <formula>ProvisionCPViviendaParking__c + ProvisionCPParkingAdicional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisión Comunidad Propietarios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>