force-app/main/default/objects/Promocion__c/fields/ProvisionCPParkingAdicional__c.field-meta.xml
<CustomField>
    <fullName>ProvisionCPParkingAdicional__c</fullName>
    <label>Provisión CP Parking Adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>