force-app/main/default/objects/Promocion__c/fields/ProvisionCPViviendaParking__c.field-meta.xml
<CustomField>
    <fullName>ProvisionCPViviendaParking__c</fullName>
    <label>Provisión CP Vivienda + Parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>