force-app/main/default/objects/Promocion__c/fields/ProvisionUltimoTrimestre__c.field-meta.xml
<CustomField>
    <fullName>ProvisionUltimoTrimestre__c</fullName>
    <formula>( PrevisionIBI__c + PrevisionBasuras__c )/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisión Último Trimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>