force-app/main/default/objects/Promocion__c/fields/PruebaPublicada__c.field-meta.xml
<CustomField>
    <fullName>PruebaPublicada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PruebaPublicada</label>
    <type>Checkbox</type>
</CustomField>