force-app/main/default/objects/Promocion__c/fields/PublicacionViviendasBaboonlab__c.field-meta.xml
<CustomField>
    <fullName>PublicacionViviendasBaboonlab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PublicacionViviendasBaboonlab</label>
    <type>Checkbox</type>
</CustomField>