force-app/main/default/objects/Promocion__c/fields/Puerto__c.field-meta.xml
<CustomField>
    <fullName>Puerto__c</fullName>
    <label>Puerto</label>
    <type>Url</type>
</CustomField>