force-app/main/default/objects/Promocion__c/fields/PuntoVenta__c.field-meta.xml
<CustomField>
    <fullName>PuntoVenta__c</fullName>
    <label>Punto de venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>