force-app/main/default/objects/Promocion__c/fields/Referencia_catastral__c.field-meta.xml
<CustomField>
    <fullName>Referencia_catastral__c</fullName>
    <label>Referencia catastral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>