force-app/main/default/objects/Promocion__c/fields/ReservaBajasSemana__c.field-meta.xml
<CustomField>
    <fullName>ReservaBajasSemana__c</fullName>
    <label>Reserva Bajas semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>