force-app/main/default/objects/Promocion__c/fields/ReservaNetoSemana__c.field-meta.xml
<CustomField>
    <fullName>ReservaNetoSemana__c</fullName>
    <formula>ReservaAltasSemana__c -  ReservaBajasSemana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserva Neto semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>