force-app/main/default/objects/Promocion__c/fields/Responsable_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Comercial Aprobador</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Comercial</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Comercial API</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PromocionesDXqm</relationshipName>
    <type>Lookup</type>
</CustomField>