force-app/main/default/objects/Promocion__c/fields/Restaurantes__c.field-meta.xml
<CustomField>
    <fullName>Restaurantes__c</fullName>
    <label>Restaurantes</label>
    <type>Url</type>
</CustomField>