force-app/main/default/objects/Promocion__c/fields/Ritmo_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>Ritmo_de_ventas__c</fullName>
    <inlineHelpText>Indica el Número de Unidades a vender por semana.</inlineHelpText>
    <label>Ritmo de ventas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>