force-app/main/default/objects/Promocion__c/fields/Sala_Multidisciplinar__c.field-meta.xml
<CustomField>
    <fullName>Sala_Multidisciplinar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sala Multidisciplinar</label>
    <type>Checkbox</type>
</CustomField>