force-app/main/default/objects/Promocion__c/fields/Sala_Multidisciplinar_m2__c.field-meta.xml
<CustomField>
    <fullName>Sala_Multidisciplinar_m2__c</fullName>
    <label>Sala Multidisciplinar m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>