force-app/main/default/objects/Promocion__c/fields/Semestre_de_escrituracion__c.field-meta.xml
<CustomField>
    <fullName>Semestre_de_escrituracion__c</fullName>
    <label>Semestre de escrituración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primer</fullName>
            </value>
            <value>
                <fullName>Segundo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>