force-app/main/default/objects/Promocion__c/fields/Ski_Room__c.field-meta.xml
<CustomField>
    <fullName>Ski_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ski Room</label>
    <type>Checkbox</type>
</CustomField>