force-app/main/default/objects/Promocion__c/fields/Slogan__c.field-meta.xml
<CustomField>
    <fullName>Slogan__c</fullName>
    <label>Slogan</label>
    <type>TextArea</type>
</CustomField>