force-app/main/default/objects/Promocion__c/fields/Slogan_Final_Web__c.field-meta.xml
<CustomField>
    <fullName>Slogan_Final_Web__c</fullName>
    <label>Slogan Final (Web)</label>
    <type>TextArea</type>
</CustomField>