force-app/main/default/objects/Promocion__c/fields/Sociedad_que_participa__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_que_participa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sociedad que participa</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promociones (Sociedad que participa)</relationshipLabel>
    <relationshipName>Promociones</relationshipName>
    <type>Lookup</type>
</CustomField>