force-app/main/default/objects/Promocion__c/fields/Socio_Empresa_Comercializadora__c.field-meta.xml
<CustomField>
    <fullName>Socio_Empresa_Comercializadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Socio/Empresa Comercializadora</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Comercializadora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promociones (Socio/Empresa Comercializadora)</relationshipLabel>
    <relationshipName>Promociones2</relationshipName>
    <type>Lookup</type>
</CustomField>