force-app/main/default/objects/Promocion__c/fields/Socio_Empresa_Promotora__c.field-meta.xml
<CustomField>
    <fullName>Socio_Empresa_Promotora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Socio/Empresa Promotora</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promociones Comercializadas</relationshipLabel>
    <relationshipName>PromocionesComercializadas</relationshipName>
    <type>Lookup</type>
</CustomField>