force-app/main/default/objects/Promocion__c/fields/Solarium__c.field-meta.xml
<CustomField>
    <fullName>Solarium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solárium</label>
    <type>Checkbox</type>
</CustomField>