force-app/main/default/objects/Promocion__c/fields/Spa__c.field-meta.xml
<CustomField>
    <fullName>Spa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spa</label>
    <type>Checkbox</type>
</CustomField>