force-app/main/default/objects/Promocion__c/fields/Spa_m2__c.field-meta.xml
<CustomField>
    <fullName>Spa_m2__c</fullName>
    <label>Spa m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>