force-app/main/default/objects/Promocion__c/fields/Suelo_Radiante__c.field-meta.xml
<CustomField>
    <fullName>Suelo_Radiante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suelo Radiante</label>
    <type>Checkbox</type>
</CustomField>