force-app/main/default/objects/Promocion__c/fields/Suma_Precios_Inmuebles__c.field-meta.xml
<CustomField>
    <fullName>Suma_Precios_Inmuebles__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Suma del campo precio de todos los inmuebles asociados a la promoción</description>
    <inlineHelpText>Suma de todos los precios de los inmuebles de la promoción</inlineHelpText>
    <label>Suma Precios Inmuebles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>