force-app/main/default/objects/Promocion__c/fields/Sup_Const_total_con_ZZCC_locales_Form__c.field-meta.xml
<CustomField>
    <fullName>Sup_Const_total_con_ZZCC_locales_Form__c</fullName>
    <formula>IF ( ABS(Sup_Const_total_con_ZZCC_locales_cal__c -  Sup_Const_total_con_ZZCC_locales_Manu__c) = 0,

IMAGE( $Setup.Gestion_de_imagenes__c.ImagenOK__c ,&quot;OK&quot;, 17, 17) , 

IF (ABS(Sup_Const_total_con_ZZCC_locales_cal__c -  Sup_Const_total_con_ZZCC_locales_Manu__c) &lt; 1,

IMAGE($Setup.Gestion_de_imagenes__c.Warning__c, &quot;Warning&quot;, 17,17) + &quot; El número calculado es &quot;+ text(Sup_Const_total_con_ZZCC_locales_cal__c),

IMAGE( $Setup.Gestion_de_imagenes__c.Imagen_ERROR__c, &quot;Incorrecto&quot;, 17, 17) +  &quot; El número calculado es &quot; + text (Sup_Const_total_con_ZZCC_locales_cal__c))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sup Const total con ZZCC locales Form</label>
    <type>Text</type>
</CustomField>