force-app/main/default/objects/Promocion__c/fields/Sup_Const_total_con_ZZCC_trasteros_cal__c.field-meta.xml
<CustomField>
    <fullName>Sup_Const_total_con_ZZCC_trasteros_cal__c</fullName>
    <label>Sup Const total con ZZCC trasteros cal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>