force-app/main/default/objects/Promocion__c/fields/Sup_Terrazas_Cubiertas_Manu__c.field-meta.xml
<CustomField>
    <fullName>Sup_Terrazas_Cubiertas_Manu__c</fullName>
    <label>Sup Terrazas Cubiertas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>