force-app/main/default/objects/Promocion__c/fields/Sup_til_Trastero_con_pasillos_calculada__c.field-meta.xml
<CustomField>
    <fullName>Sup_til_Trastero_con_pasillos_calculada__c</fullName>
    <label>Sup Útil Trastero con pasillos calculada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>