force-app/main/default/objects/Promocion__c/fields/Sup_util_Garaje_con_calles_calculada__c.field-meta.xml
<CustomField>
    <fullName>Sup_util_Garaje_con_calles_calculada__c</fullName>
    <label>Sup Útil Garaje con calles calculada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>