force-app/main/default/objects/Promocion__c/fields/Superficie_Const_ZZCC_sin_Zonas_calc__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Const_ZZCC_sin_Zonas_calc__c</fullName>
    <label>Superficie Const ZZCC sin Zonas calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>