force-app/main/default/objects/Promocion__c/fields/Superficie_Construida_m2_calculada__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Construida_m2_calculada__c</fullName>
    <label>Superficie Construida  Cerrada Viv m2 ca</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>