force-app/main/default/objects/Promocion__c/fields/Superficie_Jardines_calculada__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Jardines_calculada__c</fullName>
    <label>Superficie Jardines calculada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>