force-app/main/default/objects/Promocion__c/fields/Superficie_Jardines_Form__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Jardines_Form__c</fullName>
    <formula>IF ( ABS(Superficie_Jardines_calculada__c -  Superficie_Jardines_Manu__c) = 0 , 
IMAGE( $Setup.Gestion_de_imagenes__c.ImagenOK__c ,&quot;OK&quot;, 17, 17) , 

IF ( ABS(Superficie_Jardines_calculada__c -  Superficie_Jardines_Manu__c) &lt; 1,
IMAGE( $Setup.Gestion_de_imagenes__c.Warning__c, &quot;Warning&quot;, 17, 17) + &quot; El número calculado es &quot; + text(Superficie_Jardines_calculada__c),

IMAGE(  $Setup.Gestion_de_imagenes__c.Imagen_ERROR__c, &quot;Incorrecto&quot;, 17, 17) + &quot; El número calculado es &quot; + text (Superficie_Jardines_calculada__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superficie Jardines Form</label>
    <type>Text</type>
</CustomField>