force-app/main/default/objects/Promocion__c/fields/Superficie_m2_CCC__c.field-meta.xml
<CustomField>
    <fullName>Superficie_m2_CCC__c</fullName>
    <label>Superficie m2 CCC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>