force-app/main/default/objects/Promocion__c/fields/Superficie_m2_Locales__c.field-meta.xml
<CustomField>
    <fullName>Superficie_m2_Locales__c</fullName>
    <label>Superficie m2 Locales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>