force-app/main/default/objects/Promocion__c/fields/Superficie_Terrazas_Cubiertas_calculada__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Terrazas_Cubiertas_calculada__c</fullName>
    <label>Superficie Terrazas Cubiertas calculada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>