force-app/main/default/objects/Promocion__c/fields/Superficie_Terrazas_Descubiertas_calcula__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Terrazas_Descubiertas_calcula__c</fullName>
    <label>Superficie Terrazas Descubiertas calcula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>